RESOLVED FIXED260506
[@property] <resolution> should not accept negative resolutions
https://bugs.webkit.org/show_bug.cgi?id=260506
Summary [@property] <resolution> should not accept negative resolutions
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-21 21:01:58 PDT
Tim Nguyen (:ntim)
Comment 2 2023-08-21 21:43:40 PDT
EWS
Comment 3 2023-08-22 08:48:16 PDT
Committed 267134@main (d72a71047daa): <https://commits.webkit.org/267134@main> Reviewed commits have been landed. Closing PR #16918 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.