[@property] <resolution> should not accept negative resolutions https://bugs.webkit.org/show_bug.cgi?id=260506 rdar://114235642

Reviewed by Cameron McCormack.

Reject negative resolutions inside consumeResolution & ResolutionCSSPrimitiveValueWithCalcWithKnownTokenTypeDimensionConsumer as per the css-values spec.

Also remove the other one-off fixes that were made to reject negative resolutions, since we now reject them all in a single place now.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/register-property-syntax-parsing-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/register-property-syntax-parsing.html:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::ResolutionCSSPrimitiveValueWithCalcWithKnownTokenTypeDimensionConsumer::consume):
(WebCore::CSSPropertyParserHelpers::consumeResolution):
(WebCore::CSSPropertyParserHelpers::consumeImageSetOption):
* Source/WebCore/css/query/GenericMediaQueryParser.cpp:
(WebCore::MQ::GenericMediaQueryParserBase::validateFeatureAgainstSchema):

Canonical link: https://commits.webkit.org/267134@main